# WaveParticle

./: .gitignore  .gitmodules  BuildApp.bat  BuildDocs.bat  BuildRelease.bat  CMakeLists.txt  README.md  bd.bat  bdf.bat  br.bat  brf.bat  build.bat  build.py  clean.bat  imgui.ini  setup.bat
Engine/: CMakeLists.txt  EngineExport.h  Export.h  Farlor.h  IGame.h  Main.cpp  Test.h  imgui_impl_win32.h
Engine/Core/: CMakeLists.txt  Engine.cpp  Engine.h  EngineConfig.h  FixedUpdate.cpp  FixedUpdate.h  ThreadManager.h  Timer.cpp  Timer.h  Win32Window.cpp  Win32Window.h  Window.h
Engine/Core/Events/: ButtonEvent.cpp  ButtonEvent.h  ControllerConnectionEvent.cpp  ControllerConnectionEvent.h  ControllerVibrationEvent.cpp  ControllerVibrationEvent.h  EventData.h  EventListener.h  EventManager.cpp  EventManager.h  KeyboardEvent.cpp  KeyboardEvent.h  ThumbstickEvent.cpp  ThumbstickEvent.h
Engine/Core/Memory/: BaseAllocator.cpp  BaseAllocator.h  LinearAllocator.cpp  LinearAllocator.h  MemoryAlignmentUtils.h  PoolAllocator.cpp  PoolAllocator.h  ProxyAllocator.cpp  ProxyAllocator.h  StackAllocator.cpp  StackAllocator.h
Engine/ECS/: CMakeLists.txt  Component.cpp  Component.h  Entity.h  EntityManager.cpp  EntityManager.h  TransformComponent.h  TransformManager.cpp  TransformManager.h
Engine/Input/: Buttons.h  CMakeLists.txt  ControllerManager.cpp  ControllerManager.h  InputHandler.cpp  InputHandler.h  Keys.h
Engine/JsonCpp/: CMakeLists.txt  json.h  jsoncpp.cpp
Engine/Math/: CMakeLists.txt  CollisionFunctions.cpp  CollisionFunctions.h  FastMatrix.cpp  FastMatrix.h  FastVector.cpp  FastVector.h  Line.cpp  Line.h  Math.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Plane.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Engine/Networking/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  Packet.cpp  Packet.h  Socket.cpp  Socket.h
Engine/NewRenderer/: CBs.h  CMakeLists.txt  Camera.cpp  Camera.h  FullscreenQuad.cpp  FullscreenQuad.h  HeightField.cpp  HeightField.h  IRenderer.h  LightComponents.h  Mesh.cpp  Mesh.h  RenderResourceDesc.h  RenderResourceFormat.h  RenderResourceType.h  RenderTarget.h  Renderer.cpp  Renderer.h  RenderingComponent.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  TexturedQuad.cpp  TexturedQuad.h  Vertex.cpp  Vertex.h  ViewMode.h  WICTextureLoader.cpp
Engine/NewRenderer/D3D11/: CMakeLists.txt  DXGIModeDesc.cpp  DXGIModeDesc.h  DXGISwapChainDesc.cpp  DXGISwapChainDesc.h  RasterizerStateDesc.cpp  RasterizerStateDesc.h  WrappedD3D11.h
Engine/Physics/: CMakeLists.txt  CollisionFunctions.cpp  CollisionFunctions.h  DiffractionCollisionPacket.h  LineSegment.cpp  LineSegment.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemTimer.cpp  ParticleSystemTimer.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsSystem.cpp  PhysicsSystem.h  Plane.h  PlaneCollision.h  Sample.h
Engine/Platform/: CMakeLists.txt  Platform.h
Engine/ResourceManager/: CMakeLists.txt  ResourceDesc.cpp  ResourceDesc.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h
Engine/Util/: CMakeLists.txt  HashedString.cpp  HashedString.h  Logger.h  StringUtil.cpp  StringUtil.h  SystemCheck.cpp  SystemCheck.h  UIDGenerator.cpp  UIDGenerator.h
Engine/tinyxml2/: CMakeLists.txt
Game/: CMakeLists.txt  Game.cpp  Game.h  GameEngineHandshake.cpp
configs/: EngineConfig.json  RendererConfig.json  ShaderConfig.json
docs/: DesignDoc.tex  DevelopmentNotes.txt
resources/fonts/: nimanisual_trench.fnt
resources/shaders/: Caustics00.hlsl  Caustics01.hlsl  Deferred_Final.hlsl  DepthBufferVisualize.hlsl  FullscreenQuad.hlsl  GBufferBasePass.hlsl  GBufferLightAmbientPass.hlsl  GBufferLightPass.hlsl  GUI.hlsl  Geometry.hlsl  PositionUV.hlsl  RenderHeightmap.hlsl  TexturedQuad.hlsl  WaveParticleHB.hlsl  WaveParticleVB.hlsl  basic_position_color.hlsl  font.hlsl  transform_position_color.hlsl  vertex_position_uv_normal.hlsl
